完成部分接口